--- a/source/sass/modules/_header.scss
+++ b/source/sass/modules/_header.scss
@@ -1,4 +1,6 @@
 .header {
+    background-color: $white;
+    border-bottom: 1px solid $grey-light;
     height: $header-height;
     left: 0;
     position: fixed;
