--- a/source/sass/modules/_navigation.scss
+++ b/source/sass/modules/_navigation.scss
@@ -3,7 +3,7 @@
 *******************************************************************************/
 .nav__menu {}
 .nav__menu__li {
-    display: inline-block;
+    display: block;
     text-transform: capitalize;
     vertical-align: middle;
 
