--- a/source/sass/modules/_refine.scss
+++ b/source/sass/modules/_refine.scss
@@ -17,7 +17,7 @@
 
 
 .search {
-    border-bottom: 1px solid $grey-light;
+    border-bottom: 1px solid transparent;
     height: $header-height;
     position: relative;
     }
@@ -51,6 +51,18 @@
 
     &.is-active {
         color: $black;
+
+        &:before {
+            background-color: $black;
+            border-radius: 6px;
+            content: "";
+            height: 6px;
+            left: 0;
+            position: absolute;
+            top: 50%;
+            transform: translate3d( -16px, -50%, 0 );
+            width: 6px;
+            }
         }
     }
 .filter__col + .filter__col {
