Design tweaks round 2. Fixes #10.

--- a/source/sass/core/_document.scss
+++ b/source/sass/core/_document.scss
@@ -6,7 +6,8 @@ html {
     box-sizing: border-box;
     overflow-x: hidden;
     overflow-y: auto;
-    transition: opacity $base-duration $ease;
+    transition: opacity $base-duration $ease,
+                background-color $base-duration $ease;
 
     &.is-inactive {
         opacity: 0;
