--- a/source/sass/state/_responsive.scss
+++ b/source/sass/state/_responsive.scss
@@ -2,6 +2,15 @@
  * Responsive
 *******************************************************************************/
 @media only screen and ( max-width: $break-laptop-medium ) {
+    $header-height: 90px;
+
+    .header,
+    .search {
+        height: $header-height;
+        }
+    .page {
+        padding-top: $header-height;
+        }
     .index__col:not( :first-child ) {
         padding-left: $expander-one;
         }
