--- a/source/sass/modules/_classes.scss
+++ b/source/sass/modules/_classes.scss
@@ -5,6 +5,16 @@
 .submit {
     height: 100%;
     }
+.about {
+    position: relative;
+    }
+
+
+
+.about__footer {
+    bottom: $expander-one;
+    position: absolute;
+    }
 
 
 
