--- a/source/sass/state/_responsive.scss
+++ b/source/sass/state/_responsive.scss
@@ -1,7 +1,7 @@
 /******************************************************************************
  * Responsive
 *******************************************************************************/
-@media only screen and ( max-width: $break-laptop-medium ) {
+@media only screen and ( max-width: ($break-laptop-medium + 1px) ) {
     $header-height: 90px;
 
     .header,
