--- a/template/layouts/index.html
+++ b/template/layouts/index.html
@@ -53,6 +53,7 @@
                     <span class="target--refine icon-wrap js-controller--refine">
                         <span class="icon icon--search"></span>
                         <span class="icon icon--arrow"></span>
+                        <span class="icon p -grey refine-label js-refine-label">{{label}}</span>
                     </span>
                     <a href="/" class="target--back icon-wrap">
                         <span class="icon icon--arrow"></span>
@@ -68,9 +69,11 @@
 
         <!-- Nav -->
         <nav class="nav js-nav screen ghost is-hidden">
-            <div class="-wrap ghost__child">
+            <div class="nav__wrap -wrap ghost__child">
                 <div class="-column -column--2of4">
-                    <svg class="intro__svg" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" viewBox="-195.8 290.6 218.6 67.6" xml:space="preserve" enable-background="new -195.8 290.6 218.6 67.6"><path d="M-189.2 290.9c-3.6 0-6.5 3.1-6.6 6.7 0 3.7 3 6.6 6.6 6.6 3.7 0 6.7-3 6.7-6.6C-182.5 293.9-185.5 290.9-189.2 290.9z"/><rect x="-193.3" y="314" width="8.3" height="43.1"/><path d="M-146.7 312.9c-7.3 0-12.6 3.5-15.2 8.7V314h-8.3v43h8.3v-22.2c0-7.7 3.9-14.7 12.2-14.7 8.1 0 10.9 6.1 10.9 14.1v22.9h8.3v-25.4c0-6.1-0.9-9.9-3.3-13.1C-136.3 315-140.7 312.9-146.7 312.9zM-82.8 321.3c-2.8-5.2-8.8-8.5-15.1-8.5 -13.2 0-22.1 10.5-22.1 22.7s8.9 22.6 22.1 22.6c6.3 0 12.3-3.3 15.1-8.5v7.5h8.2v-66.5h-8.2V321.3zM-97.4 350.8c-8.7 0-14.4-6.9-14.4-15.2 0-8.3 5.7-15.3 14.4-15.3 8.9 0 14.6 7 14.6 15.3C-82.8 343.8-88.5 350.7-97.4 350.8zM-22 332.4c0-11-8.7-19.5-19.9-19.5 -13.6 0-21.3 9.7-21.3 22.7 0 12.4 7.1 22.6 21.6 22.6 10.8 0 17.9-6.5 19.3-13.8h-8.4c-1.3 3.7-4.4 6.8-10.9 6.8 -9.5 0-13-6.1-13.4-13.4h32.6C-22 335.4-22 333.6-22 332.4zM-54.9 331.5c0.2-7.8 5.4-12.3 12.8-12.2 7 0 12.2 4.7 12.2 12.2H-54.9z"/><polygon points="8.2 335.4 22.6 314 13.1 314 3.4 329 -6.3 314 -15.8 314 -1.4 335.4 -16 357.1 -6.5 357.1 3.4 341.8 13.3 357.1 22.8 357.1 "/></svg>
+                    <a href="/" class="nav__logo">
+                        <svg class="intro__svg" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" viewBox="1522 -198 3684 1036" xml:space="preserve"><rect x="1531" y="91.8" width="168.2" height="719.2"/><path d="M5081.1 596.4c-63.4 0-115.3 51.9-115.3 116.7 0 63.4 51.9 115.3 115.3 115.3 64.8 0 116.7-51.9 116.7-115.3C5197.8 648.3 5145.9 596.4 5081.1 596.4zM2272 73.2c-106.5 0-193.3 53.5-234.6 102.8V91.8h-168.2V811h168.2V439c0-123.5 55.6-217.6 172.9-217.6 120.4 0 155.9 94.1 155.9 217.6v372h168.2V383.4c0-98.8-10.8-159-46.3-213C2448 110.2 2375.4 73.2 2272 73.2zM3245.6 173c-51.4-61.2-139-99.7-222.3-99.7 -219.2 0-368.9 174.4-368.9 378.1s149.7 378.1 368.9 378.1c83.4 0 174.8-41 222.3-99.7V811h168.2v-999h-168.2V173zM3032.6 679.8c-126.6 0-209.9-104.9-209.9-228.4S2906 223 3032.6 223c129.7 0 213 104.9 213 228.4S3162.2 679.8 3032.6 679.8z"/><polygon points="4901.2 91.8 4706.7 91.8 4574 317.1 4441.2 91.8 4246.7 91.8 4476.7 448.3 4242.1 811 4436.6 811 4574 579.5 4711.3 811 4905.8 811 4671.2 448.3 "/><path d="M3888.8 73.2c-226.9 0-355 162.1-355 378.1 0 211.5 117.3 378.2 359.6 378.2 183.7 0 293.8-99.6 322.6-234.6h-165.8c-20.1 51-61.1 87.9-156.8 87.9 -136.7 0-192.9-97.9-192.9-178.9H4219c1.7-19.5 2.5-38.7 2.5-56.8C4221.5 212.2 4083.5 73.2 3888.8 73.2zM3700.5 377c0-96 80.3-171.5 183.7-171.5 99.9 0 171.4 75.5 171.4 171.5H3700.5z"/></svg>
+                    </a>
                 </div>
                 <div class="-column -column--2of4 -text--right">
                     <ul class="nav__menu ghost__child -exp">
@@ -95,7 +98,7 @@
                 <div class="filter__col">
                     <p class="p">Sort</p>
                     <ul class="filter__set">
-                        <li v-for="sort in sorts" class="filter__opt p -grey js-sort-option {{sort.data.value.value === 'uuid' ? 'is-active' : ''}}" data-value="{{sort.data.value.value}}">{{sort.data.label.value}}</li>
+                        <li v-for="sort in sorts" class="filter__opt p -grey js-sort-option {{sort.data.value.value === 'uuid' ? 'is-active' : ''}}" data-label="{{sort.data.label.value}}" data-value="{{sort.data.value.value}}">{{sort.data.label.value}}</li>
                     </ul>
                 </div>
                 <div class="filter__col">
@@ -127,7 +130,7 @@
         <!-- Splash -->
         <section class="intro js-intro screen ghost -text--center is-active">
             <h1 class="intro__text ghost__child">
-                <svg class="intro__svg" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" viewBox="-195.8 290.6 218.6 67.6" xml:space="preserve" enable-background="new -195.8 290.6 218.6 67.6"><path d="M-189.2 290.9c-3.6 0-6.5 3.1-6.6 6.7 0 3.7 3 6.6 6.6 6.6 3.7 0 6.7-3 6.7-6.6C-182.5 293.9-185.5 290.9-189.2 290.9z"/><rect x="-193.3" y="314" width="8.3" height="43.1"/><path d="M-146.7 312.9c-7.3 0-12.6 3.5-15.2 8.7V314h-8.3v43h8.3v-22.2c0-7.7 3.9-14.7 12.2-14.7 8.1 0 10.9 6.1 10.9 14.1v22.9h8.3v-25.4c0-6.1-0.9-9.9-3.3-13.1C-136.3 315-140.7 312.9-146.7 312.9zM-82.8 321.3c-2.8-5.2-8.8-8.5-15.1-8.5 -13.2 0-22.1 10.5-22.1 22.7s8.9 22.6 22.1 22.6c6.3 0 12.3-3.3 15.1-8.5v7.5h8.2v-66.5h-8.2V321.3zM-97.4 350.8c-8.7 0-14.4-6.9-14.4-15.2 0-8.3 5.7-15.3 14.4-15.3 8.9 0 14.6 7 14.6 15.3C-82.8 343.8-88.5 350.7-97.4 350.8zM-22 332.4c0-11-8.7-19.5-19.9-19.5 -13.6 0-21.3 9.7-21.3 22.7 0 12.4 7.1 22.6 21.6 22.6 10.8 0 17.9-6.5 19.3-13.8h-8.4c-1.3 3.7-4.4 6.8-10.9 6.8 -9.5 0-13-6.1-13.4-13.4h32.6C-22 335.4-22 333.6-22 332.4zM-54.9 331.5c0.2-7.8 5.4-12.3 12.8-12.2 7 0 12.2 4.7 12.2 12.2H-54.9z"/><polygon points="8.2 335.4 22.6 314 13.1 314 3.4 329 -6.3 314 -15.8 314 -1.4 335.4 -16 357.1 -6.5 357.1 3.4 341.8 13.3 357.1 22.8 357.1 "/></svg>
+                <svg class="intro__svg" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" viewBox="1522 -198 3684 1036" xml:space="preserve"><rect x="1531" y="91.8" width="168.2" height="719.2"/><path d="M5081.1 596.4c-63.4 0-115.3 51.9-115.3 116.7 0 63.4 51.9 115.3 115.3 115.3 64.8 0 116.7-51.9 116.7-115.3C5197.8 648.3 5145.9 596.4 5081.1 596.4zM2272 73.2c-106.5 0-193.3 53.5-234.6 102.8V91.8h-168.2V811h168.2V439c0-123.5 55.6-217.6 172.9-217.6 120.4 0 155.9 94.1 155.9 217.6v372h168.2V383.4c0-98.8-10.8-159-46.3-213C2448 110.2 2375.4 73.2 2272 73.2zM3245.6 173c-51.4-61.2-139-99.7-222.3-99.7 -219.2 0-368.9 174.4-368.9 378.1s149.7 378.1 368.9 378.1c83.4 0 174.8-41 222.3-99.7V811h168.2v-999h-168.2V173zM3032.6 679.8c-126.6 0-209.9-104.9-209.9-228.4S2906 223 3032.6 223c129.7 0 213 104.9 213 228.4S3162.2 679.8 3032.6 679.8z"/><polygon points="4901.2 91.8 4706.7 91.8 4574 317.1 4441.2 91.8 4246.7 91.8 4476.7 448.3 4242.1 811 4436.6 811 4574 579.5 4711.3 811 4905.8 811 4671.2 448.3 "/><path d="M3888.8 73.2c-226.9 0-355 162.1-355 378.1 0 211.5 117.3 378.2 359.6 378.2 183.7 0 293.8-99.6 322.6-234.6h-165.8c-20.1 51-61.1 87.9-156.8 87.9 -136.7 0-192.9-97.9-192.9-178.9H4219c1.7-19.5 2.5-38.7 2.5-56.8C4221.5 212.2 4083.5 73.2 3888.8 73.2zM3700.5 377c0-96 80.3-171.5 183.7-171.5 99.9 0 171.4 75.5 171.4 171.5H3700.5z"/></svg>
             </h1>
             <div class="intro__load">
                 <div class="intro__load__fill js-intro-fill"></div>
@@ -205,7 +208,7 @@
                     </div>
                 </div>
                 <div class="h1 -wrap -exp">Other Artists</div>
-                <div class="artist__other js-artist-others -wrap-w -exp-t">
+                <div class="artist__other js-artist-others -wrap-w -exp">
                     <div v-for="otherArtist in otherArtists" class="artist__other__col -wrap -exp -column -column--1of3">
                         <div class="index__thumbnail artist__other__thumbnail">
                             <figure class="index__figure">
@@ -224,20 +227,47 @@
                 </div>
             </article>
 
-            <!-- Featured -->
+            <!-- Features -->
             <section class="features js-features -wrap -exp -text--center">
-                <h1 class="h1">Features</h1>
+                <div v-for="feature in features" class="features__item -exp">
+                    <a href="/feature/{{feature.slug}}/">
+                        <img class="image image--{{feature.data.featureImage.value.main.dimensions.width > feature.data.featureImage.value.main.dimensions.height ? 'wide' : 'tall'}} js-lazy-image" data-img-src="{{feature.data.featureImage.value.main.url}}" />
+                    </a>
+                    <p class="p">{{feature.data.name.value}}</p>
+                </div>
             </section>
 
             <!-- Feature -->
             <article class="feature js-feature -wrap -exp -text--center">
-                <h1 class="h1">Feature</h1>
+                <div class="feature__title -exp">
+                    <h1 class="h1">{{feature.data.name.value}}</h1>
+                    <p class="p">
+                        <a href="/artist/{{feature.data.artist.value.document.slug}}">Artist</a>
+                    </p>
+                </div>
+                <div class="feature__image">
+                    <img class="image image--{{feature.data.featureImage.value.main.dimensions.width > feature.data.featureImage.value.main.dimensions.height ? 'wide' : 'tall'}} js-lazy-image" data-img-src="{{feature.data.featureImage.value.main.url}}" />
+                </div>
+                <div v-for="slice in feature.data.body.value" class="feature__slice">
+                    <p class="p">{{slice.slice_type}}</p>
+                </div>
             </article>
 
             <!-- About -->
-            <section class="about js-about -wrap -exp ghost">
-                <div class="ghost__child -column--2of4">
-                    <div class="h1">{{data.description.value}}</div>
+            <section class="about js-about -wrap ghost">
+                <div class="about__wrap ghost__child -column--3of4">
+                    <div class="h1 -light">{{meta.data.description.value}}</div>
+                    <div class="p -bump">
+                        <p class="-light">Say Hello</p>
+                        <a href="mailto:{{meta.data.email.value}}" class="-grey">{{meta.data.email.value}}</a>
+                    </div>
+                    <div class="p -bump">
+                        <p class="-light">Follow Us</p>
+                        <p v-for="social in socials">
+                            <a href="{{social.data.url.value}}" class="-grey" target="_blank">{{social.data.title.value}}</a>
+                        </p>
+                    </div>
+                    <div class="about__footer p -exp-t -grey">&copy; Index 2016 / All Images &copy; of their respective owners</div>
                 </div>
             </section>
         </div>
