--- a/source/sass/core/_typography.scss
+++ b/source/sass/core/_typography.scss
@@ -1,8 +1,8 @@
 /******************************************************************************
  * Meta Data
 *******************************************************************************/
-.meta {
-    @include meta();
+.m {
+    @include m();
     }
 
 
@@ -56,4 +56,13 @@
 *******************************************************************************/
 .h1 {
     @include h1();
+    }
+.h2 {
+    @include h2();
+    }
+.h3 {
+    @include h3();
+    }
+.h4 {
+    @include h4();
     }
