--- a/source/sass/state/_modifiers.scss
+++ b/source/sass/state/_modifiers.scss
@@ -23,8 +23,8 @@
     padding-right: $wrapper-padding;
     }
 .-wrap-w {
-    padding-left: $image-padding;
-    padding-right: $image-padding;
+    padding-left: $wrapper-padding-big;
+    padding-right: $wrapper-padding-big;
     }
 .-wrap-l {
     padding-left: $wrapper-padding;
