--- a/source/sass/modules/_header.scss
+++ b/source/sass/modules/_header.scss
@@ -1,6 +1,5 @@
 .header {
-    background-color: $white;
-    //border-bottom: 1px solid $grey-light;
+    background-color: rgba( 255, 255, 255, 0.9 );
     height: $header-height;
     left: 0;
     position: fixed;
