--- a/template/layouts/index.html
+++ b/template/layouts/index.html
@@ -72,16 +72,16 @@
             <div class="nav__wrap -wrap ghost__child">
                 <div class="-column -column--2of4">
                     <a href="/" class="nav__logo">
-                        <svg class="intro__svg" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" viewBox="1522 -198 3684 1036" xml:space="preserve"><rect x="1531" y="91.8" width="168.2" height="719.2"/><path d="M5081.1 596.4c-63.4 0-115.3 51.9-115.3 116.7 0 63.4 51.9 115.3 115.3 115.3 64.8 0 116.7-51.9 116.7-115.3C5197.8 648.3 5145.9 596.4 5081.1 596.4zM2272 73.2c-106.5 0-193.3 53.5-234.6 102.8V91.8h-168.2V811h168.2V439c0-123.5 55.6-217.6 172.9-217.6 120.4 0 155.9 94.1 155.9 217.6v372h168.2V383.4c0-98.8-10.8-159-46.3-213C2448 110.2 2375.4 73.2 2272 73.2zM3245.6 173c-51.4-61.2-139-99.7-222.3-99.7 -219.2 0-368.9 174.4-368.9 378.1s149.7 378.1 368.9 378.1c83.4 0 174.8-41 222.3-99.7V811h168.2v-999h-168.2V173zM3032.6 679.8c-126.6 0-209.9-104.9-209.9-228.4S2906 223 3032.6 223c129.7 0 213 104.9 213 228.4S3162.2 679.8 3032.6 679.8z"/><polygon points="4901.2 91.8 4706.7 91.8 4574 317.1 4441.2 91.8 4246.7 91.8 4476.7 448.3 4242.1 811 4436.6 811 4574 579.5 4711.3 811 4905.8 811 4671.2 448.3 "/><path d="M3888.8 73.2c-226.9 0-355 162.1-355 378.1 0 211.5 117.3 378.2 359.6 378.2 183.7 0 293.8-99.6 322.6-234.6h-165.8c-20.1 51-61.1 87.9-156.8 87.9 -136.7 0-192.9-97.9-192.9-178.9H4219c1.7-19.5 2.5-38.7 2.5-56.8C4221.5 212.2 4083.5 73.2 3888.8 73.2zM3700.5 377c0-96 80.3-171.5 183.7-171.5 99.9 0 171.4 75.5 171.4 171.5H3700.5z"/></svg>
+                        <svg class="nav__svg" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" viewBox="1522 -198 3684 1036" xml:space="preserve"><rect x="1531" y="91.8" width="168.2" height="719.2"/><path d="M5081.1 596.4c-63.4 0-115.3 51.9-115.3 116.7 0 63.4 51.9 115.3 115.3 115.3 64.8 0 116.7-51.9 116.7-115.3C5197.8 648.3 5145.9 596.4 5081.1 596.4zM2272 73.2c-106.5 0-193.3 53.5-234.6 102.8V91.8h-168.2V811h168.2V439c0-123.5 55.6-217.6 172.9-217.6 120.4 0 155.9 94.1 155.9 217.6v372h168.2V383.4c0-98.8-10.8-159-46.3-213C2448 110.2 2375.4 73.2 2272 73.2zM3245.6 173c-51.4-61.2-139-99.7-222.3-99.7 -219.2 0-368.9 174.4-368.9 378.1s149.7 378.1 368.9 378.1c83.4 0 174.8-41 222.3-99.7V811h168.2v-999h-168.2V173zM3032.6 679.8c-126.6 0-209.9-104.9-209.9-228.4S2906 223 3032.6 223c129.7 0 213 104.9 213 228.4S3162.2 679.8 3032.6 679.8z"/><polygon points="4901.2 91.8 4706.7 91.8 4574 317.1 4441.2 91.8 4246.7 91.8 4476.7 448.3 4242.1 811 4436.6 811 4574 579.5 4711.3 811 4905.8 811 4671.2 448.3 "/><path d="M3888.8 73.2c-226.9 0-355 162.1-355 378.1 0 211.5 117.3 378.2 359.6 378.2 183.7 0 293.8-99.6 322.6-234.6h-165.8c-20.1 51-61.1 87.9-156.8 87.9 -136.7 0-192.9-97.9-192.9-178.9H4219c1.7-19.5 2.5-38.7 2.5-56.8C4221.5 212.2 4083.5 73.2 3888.8 73.2zM3700.5 377c0-96 80.3-171.5 183.7-171.5 99.9 0 171.4 75.5 171.4 171.5H3700.5z"/></svg>
                     </a>
                 </div>
                 <div class="-column -column--2of4 -text--right">
                     <ul class="nav__menu ghost__child -exp">
                         <li v-for="nav in navs" class="nav__menu__li nav__menu__{{nav.data.style.value}}">
-                            <a v-if="(nav.data.title.value !== 'Submit')" href="{{nav.data.url.value}}" class="nav__menu__a js-nav-item -grey {{nav.data.style.value === 'primary' ? 'h1' : 'p'}}">{{nav.data.title.value}}</a>
-                            <span v-else class="nav__menu__a js-controller--submit -grey h1">Submit</span>
+                            <a v-if="(nav.data.title.value !== 'Submit')" href="{{nav.data.url.value}}" class="nav__menu__a js-nav-item -grey {{nav.data.style.value === 'primary' ? 'h4' : 'p'}}">{{nav.data.title.value}}</a>
+                            <span v-else class="nav__menu__a js-controller--submit -grey h4">Submit</span>
                         </li>
-                        <li v-for="social in socials" class="nav__menu__li">
+                        <li v-for="social in socials" class="nav__menu__li nav__menu__tertiary">
                             <a href="{{social.data.url.value}}" class="nav__menu__a js-nav-item -grey p" target="_blank">{{social.data.title.value}}</a>
                         </li>
                     </ul>
@@ -138,10 +138,13 @@
         </section>
 
         <!-- Submit -->
-        <section class="submit js-submit screen screen--dark ghost -text--center">
+        <section class="submit js-submit screen ghost -text--center">
             <div class="submit__wrap ghost__child">
-                <input class="submit__field js-submit-field p" type="text" placeholder="enter artist name or website" />
-                <button class="submit__button js-submit-button p">Submit</button>
+                <div class="submit__message h4 -light">Thanks!</div>
+                <div class="submit__form">
+                    <input class="submit__field js-submit-field h4" type="text" placeholder="enter artist name or website" />
+                    <button class="submit__button js-submit-button p">Submit</button>
+                </div>
             </div>
         </section>
 
@@ -149,7 +152,10 @@
         <div class="templates js-templates is-hidden">
             <!-- Index -->
             <section class="index js-index">
-                <div v-show="artist.show" v-for="artist in artists" class="index__row -wrap -exp -f-zero -text--center" data-uuid="{{artist.uuid}}">
+                <div v-if="noresults" class="-wrap -exp -f-zero">
+                    <div class="h4">No Artists</div>
+                </div>
+                <div v-for="artist in documents" class="index__row -wrap -exp -f-zero -text--center {{artist.show ? 'is-active' : 'is-hidden'}}" data-uuid="{{artist.uuid}}">
                     <div class="index__col index__feature -column -text--left">
                         <div class="index__thumbnail">
                             <figure class="index__figure">
@@ -194,7 +200,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="artist__gallery -column -exp-b">
+                <div class="artist__gallery -column">
                     <div v-for="galleryItem in artist.data.gallery.value" class="artist__gallery__item -exp">
                         <div v-if="galleryItem.video" class="artist__gallery__video js-artist-video" data-provider="{{galleryItem.video.value.oembed.provider_name.toLowerCase()}}" v-bind:style="{paddingBottom: galleryItem.video.value.oembed.height / galleryItem.video.value.oembed.width * 100 + '%'}">
                             {{{galleryItem.video.value.oembed.html.replace( 'feature=oembed', 'enablejsapi=1' )}}}
@@ -207,20 +213,20 @@
                         </div>
                     </div>
                 </div>
-                <div class="h1 -wrap -exp">Other Artists</div>
-                <div class="artist__other js-artist-others -wrap-w -exp">
-                    <div v-for="otherArtist in otherArtists" class="artist__other__col -wrap -exp -column -column--1of3">
-                        <div class="index__thumbnail artist__other__thumbnail">
+                <div class="artist__related__label h3 -wrap">Related Artists</div>
+                <div class="artist__related js-artist-related -wrap-w">
+                    <div v-for="relatedArtist in relatedArtists" class="artist__related__col -wrap -exp -column -column--1of3">
+                        <div class="index__thumbnail artist__related__thumbnail">
                             <figure class="index__figure">
-                                <a href="/artist/{{otherArtist.slug}}/">
-                                    <img class="index__image image image--{{otherArtist.data.featureImage.value.main.dimensions.width > otherArtist.data.featureImage.value.main.dimensions.height ? 'wide' : 'tall'}} js-lazy-image" data-img-src="{{otherArtist.data.featureImage.value.main.url}}" />
+                                <a href="/artist/{{relatedArtist.slug}}/">
+                                    <img class="index__image image image--{{relatedArtist.data.featureImage.value.main.dimensions.width > relatedArtist.data.featureImage.value.main.dimensions.height ? 'wide' : 'tall'}} js-lazy-image" data-img-src="{{relatedArtist.data.featureImage.value.main.url}}" />
                                 </a>
                             </figure>
                         </div>
-                        <a class="artist__other__meta" href="/artist/{{otherArtist.slug}}/">
-                            <p class="p">{{otherArtist.data.name.value}}</p>
+                        <a class="artist__related__meta" href="/artist/{{relatedArtist.slug}}/">
+                            <p class="p">{{relatedArtist.data.name.value}}</p>
                             <p class="p -grey">
-                                <span v-for="type in otherArtist.data.types.value">{{type.type.value.data.name.value}}</span>
+                                <span v-for="type in relatedArtist.data.types.value">{{type.type.value.data.name.value}}</span>
                             </p>
                         </a>
                     </div>
@@ -240,7 +246,7 @@
             <!-- Feature -->
             <article class="feature js-feature -wrap -exp -text--center">
                 <div class="feature__title -exp">
-                    <h1 class="h1">{{feature.data.name.value}}</h1>
+                    <div class="h3">{{feature.data.name.value}}</div>
                     <p class="p">
                         <a href="/artist/{{feature.data.artist.value.document.slug}}">Artist</a>
                     </p>
@@ -255,19 +261,21 @@
 
             <!-- About -->
             <section class="about js-about -wrap ghost">
-                <div class="about__wrap ghost__child -column--3of4">
-                    <div class="h1 -light">{{meta.data.description.value}}</div>
+                <div class="about__wrap ghost__child">
+                    <div class="h3">
+                        <span v-for="block in meta.data.description.value">{{block.text}}</span>
+                    </div>
                     <div class="p -bump">
-                        <p class="-light">Say Hello</p>
+                        <p>Say Hello</p>
                         <a href="mailto:{{meta.data.email.value}}" class="-grey">{{meta.data.email.value}}</a>
                     </div>
                     <div class="p -bump">
-                        <p class="-light">Follow Us</p>
+                        <p>Follow Us</p>
                         <p v-for="social in socials">
                             <a href="{{social.data.url.value}}" class="-grey" target="_blank">{{social.data.title.value}}</a>
                         </p>
                     </div>
-                    <div class="about__footer p -exp-t -grey">&copy; Index 2016 / All Images &copy; of their respective owners</div>
+                    <div class="about__footer m -exp-t -grey">&copy; Index 2016 / All Images &copy; of their respective owners</div>
                 </div>
             </section>
         </div>
