--- a/source/sass/modules/_header.scss
+++ b/source/sass/modules/_header.scss
@@ -4,10 +4,14 @@
     left: 0;
     position: fixed;
     top: 0;
-    transition: padding-left $long-duration $ease-cubic-sharp,
-                transform $long-duration $ease-cubic-sharp;
+    transition: padding-left $base-duration $ease-cubic-sharp,
+                transform $base-duration $ease-cubic-sharp;
     width: 100%;
     z-index: $z_layer_10;
+
+    &.is-inactive {
+        transform: translateY( -100% );
+        }
     }
 .header__wrap {
     width: 100%;
