--- a/source/sass/core/_pages.scss
+++ b/source/sass/core/_pages.scss
@@ -8,8 +8,8 @@
     overflow: auto;
     padding-top: $header-height;
     top: 0;
-    transition: padding-left $long-duration $ease-cubic-sharp,
-                transform $long-duration $ease-cubic-sharp;
+    transition: padding-left $base-duration $ease-cubic-sharp,
+                transform $base-duration $ease-cubic-sharp;
     width: 100%;
     -webkit-overflow-scrolling: touch;
     }
