--- a/source/sass/modules/_animate.scss
+++ b/source/sass/modules/_animate.scss
@@ -1,10 +1,10 @@
 .animate {
     opacity: 0;
     transform: translate3d( 0, $bump-size, 0 );
-    transition: opacity $long-duration $ease-out,
+    transition: opacity $base-duration $ease-out,
                 transform $base-duration $ease-out;
 
-    &.is-active {
+    &.is-animate {
         opacity: 1;
         transform: translate3d( 0, 0, 0 );
         }
