--- a/source/sass/state/_responsive.scss
+++ b/source/sass/state/_responsive.scss
@@ -42,6 +42,14 @@
 
 
 
+@media only screen and ( max-width: $break-ipad-pro-width ) {
+    .artist__related__col {
+        width: 50%;
+        }
+}
+
+
+
 @media only screen and ( max-width: $break-tablet-medium ) {
     .index .p,
     .refine .p {
@@ -66,6 +74,10 @@
         padding-left: $wrapper-padding;
         padding-right: $wrapper-padding;
         width: 100%;
+        }
+    .artist__gallery__item {
+        padding-bottom: $mobile-padding;
+        padding-top: $mobile-padding;
         }
     .artist__gallery .image {
         width: 100%;
@@ -123,10 +135,13 @@
         padding-left: $expander-mobile;
         padding-right: $expander-mobile;
         }
-    .artist__gallery__image {
-        padding-bottom: 0;
-        padding-top: $expander-mobile;
-    }
+    .artist__gallery__item {
+        padding-bottom: $mobile-padding / 2;
+        padding-top: $mobile-padding / 2;
+        }
+    .artist__related__col {
+        width: 100%;
+        }
     .nav__menu__li {
         display: block;
 
@@ -143,10 +158,13 @@
             pointer-events: none;
             }
 
-        .page,
-        .header {
+        .page {
             padding-left: 0;
             transform: translate3d( 80%, 0, 0 );
+            }
+        .header {
+            padding-left: 0;
+            transform: translateX( 80% );
             }
     }
 }
