Add npm install to node app deploy in Circlefile. Responsive about page. Add `order` field to Artist model.

--- a/source/sass/config/_mixins.scss
+++ b/source/sass/config/_mixins.scss
@@ -25,6 +25,7 @@
 *******************************************************************************/
 @mixin m() {
     font-size: $m-size;
+    line-height: 1.4;
     @include font-sans-text();
 }
 @mixin p() {
